# zapEngine

./: .dockerignore  .env.example  .gitignore  .jscpd.json  .npmrc  CLAUDE.md  CLAUDE_DESIGN_HANDOFF.md  CONTRIBUTING.md  DESKTOP_REWORK_HANDOFF.md  HANDOFF-ADR-0002-EXEC.md  LICENSE.md  README.md  Zap Pilot POC.dc.html  apps.conf  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  test-scanner.js  turbo.json
apps/analytics-engine/: .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  check_duplicates.py  fly.toml  package.json  pre-commit  pyproject.toml  turbo.json  vulture_whitelist.py
apps/analytics-engine/docs/: PATTERN_MIGRATION.md  SENTIMENT_DATABASE_SERVICE.md  coding_standards.md  snapshot_architecture.md  sql_parameter_audit.md
apps/analytics-engine/docs/diagnostics/: spy_tax_2026-04-15.md
apps/analytics-engine/examples/: sentiment_database_service_usage.py
apps/analytics-engine/migrations/: 001_phase_3.5_foundation_indexes.sql  002_cleanup_unused_indexes.sql  003_add_functional_indexes.sql  003b_wallet_token_snapshots_index.sql  004_portfolio_snapshots_partial_index.sql  007_create_regime_transitions_view.sql  012_add_activity_tracking_columns.sql  013_daily_snapshot_views.sql  014_fix_daily_portfolio_snapshots_dedup.sql  015_simplify_daily_portfolio_snapshots.sql  016_optimize_daily_portfolio_snapshots_refresh.sql  017_create_strategy_saved_configs.sql  018_create_strategy_trade_history.sql  019_nest_strategy_saved_config_params.sql  020_fix_default_strategy_preset.sql  021_remove_deprecated_strategy_configs.sql  022_collapse_strategy_saved_configs.sql  023_prepare_incremental_portfolio_rollups.sql  024_activate_incremental_portfolio_rollups.sql  025_retire_defillama_pool_apr.sql  create_portfolio_category_trend_mv.sql  landing_page_performance_indexes.sql  rebuild_materialized_views.sql
apps/analytics-engine/reports/: extended_metrics_rank_correlation.md  optuna_cooldown180_sharpe.json  optuna_first_run.json  optuna_smoke.json
apps/analytics-engine/scripts/: README.md  __init__.py  _compare_common.py  _compare_constraints.py  _compare_metrics.py  _compare_normalize.py  _compare_render.py  _compare_summaries.py  _summarize.py  analyze_btc_sentiment.py  analyze_compare.py  audit_sql_params.py  bootstrap-integration-db.sql  check_required_dependencies.py  check_service_reachability.py  run-tests-precommit.sh  run_backtest_policy_matrix.py  spy_summary.py
apps/analytics-engine/scripts/attribution/: __init__.py  _helpers.py  diagnose_spy_tax.py  extended_metrics_rank_compare.py  hierarchical_event_validator.py  optuna_search.py  per_rule_report.py  regime_breakdown.py  rule_only_sweep.py  spy_tax_helpers.py  sweep_hierarchical.py  sweep_production_window.py  validate_hierarchical_events.py
apps/analytics-engine/scripts/backtesting/: __init__.py  analyzer.py  compare_payload.py  compare_verify.py  compare_views.py  matrix_runner.py
apps/analytics-engine/scripts/ci/: check_required_dependencies.py  run-tests-precommit.sh
apps/analytics-engine/scripts/db/: bootstrap-integration-db.sh  bootstrap-integration-db.sql
apps/analytics-engine/scripts/landing/: __init__.py  equity_curve.py
apps/analytics-engine/scripts/market/: analyze_btc_sentiment.py
apps/analytics-engine/scripts/quality/: audit_sql_params.py  check-strategy-dup-debt.mjs  check_service_reachability.py
apps/analytics-engine/src/: main.py
apps/analytics-engine/src/api/: cache_headers.py  error_handling.py
apps/analytics-engine/src/config/: optimized_params.json  strategy_presets.py
apps/analytics-engine/src/core/: cache_service.py  config.py  connection_pool.py  constants.py  database.py  database_metrics.py  exceptions.py  filter_utils.py  financial_utils.py  utils.py
apps/analytics-engine/src/exceptions/: __init__.py  market_sentiment.py
apps/analytics-engine/src/models/: __init__.py  analytics_responses.py  backtesting.py  borrowing.py  dashboard.py  market_dashboard.py  market_data_freshness.py  market_sentiment.py  portfolio.py  portfolio_snapshot.py  regime_tracking.py  strategy.py  strategy_config.py  token_price.py  types.py  validation_utils.py  yield_returns.py  yield_roi.py
apps/analytics-engine/src/services/: CLAUDE.md  dependencies.py  exceptions.py  yield_return_service.py
apps/analytics-engine/src/utils/: wallet_validation.py
apps/analytics-engine/tests/: conftest.py  test_additional_coverage.py  test_all_endpoints_data_integrity.py  test_api_integration.py  test_btc_sentiment_analysis.py  test_classify_token_category.py  test_core_config.py  test_core_database.py  test_cross_service_consistency.py  test_database_coverage.py  test_database_schema.py  test_dependencies_simple.py  test_integration_conftest.py  test_landing_page_validation.py  test_main_app.py  test_main_coverage.py  test_main_lifecycle.py  test_pool_performance_validation.py  test_risk_metrics_validation.py  test_safeguards_deduplication.py  test_services_dependencies.py  test_trend_analysis_validation.py  test_validation_events.py  test_yield_returns_validation.py
apps/analytics-engine/tests/api/: test_backtesting.py  test_borrowing_positions.py  test_borrowing_positions_router_coverage.py  test_cache_headers.py  test_error_handling.py  test_error_handling_comprehensive.py  test_error_response.py  test_main.py  test_market_dashboard_endpoint.py  test_market_regime_btc.py  test_pools.py  (+8 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+3124 files in other folders)
