[package]
name = "zap-pilot-desktop"
version = "0.1.0"
description = "Zap Pilot desktop shell"
authors = ["ZapEngine"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77"
default-run = "zap-pilot-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[lib]
name = "zap_pilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zap-pilot-desktop"
path = "src/main.rs"
